(01/03/02) Erwann Chenede - <erwann.chenede@sun.com> fixed bug http://bugzilla.gnome.org/show_bug.cgi?id=73127